--- a/LaTex/tfg.tex
+++ b/LaTex/tfg.tex
@@ -64,8 +64,8 @@
 \input{preliminares/dedicatoria}                % Opcional
 \input{preliminares/agradecimientos}            % Opcional
 
-\input{preliminares/resumen1}
-\input{preliminares/summary1}                    
+\input{preliminares/resumen}
+\input{preliminares/summary}                    
 
 \input{preliminares/tablacontenidos}            
 \input{preliminares/introduccion}               
@@ -83,7 +83,7 @@
 \part{Estado del Arte}
 \input{capitulos/estado_arte}
 
-\part{Desarrollo Teórico y Empírico}
+\part{Análisis Teórico y Empírico}
 \input{capitulos/desarrollo_matematico}
 \input{capitulos/desarrollo_informatico}
 
@@ -105,6 +105,7 @@
 \input{apendices/apendice01}
 \input{apendices/apendice02}
 \input{apendices/apendice03}
+\input{apendices/apendice04}
 % Añadir tantos apéndices como sea necesario 
 
 % -------------------------------------------------------------------
