--- a/LaTex/capitulos/estado_arte.tex
+++ b/LaTex/capitulos/estado_arte.tex
@@ -1,7 +1,7 @@
 % !TeX root = ../tfg.tex
 % !TeX encoding = utf8
 
-\chapter{Trabajos relacionados}\label{sec:evolucion-ddd}
+\chapter{Trabajos Relacionados}\label{sec:evolucion-ddd}
 
 El \emph{Deep Double Descent}, al estar estrechamente relacionado al avance tecnológico y al crecimiento en la capacidad y el tamaño de los modelos de aprendizaje profundo, ha despertado un mayor interés en los últimos años, como puede observarse en la Figura~\ref{fig:histogram}. No obstante, aunque se percibe durante los últimos años una tendencia al alza del número de artículos que hacen referencia al mismo, únicamente encontramos un total $204$ publicaciones en Scopus\footnote{\label{nota:scopus}Encontradas $204$ publicaciones a fecha $12$ de abril de $2025$ usando la consulta:  
 \texttt{TITLE-ABS-KEY ((deep AND double AND descent) OR (overparameterized AND generalization)) AND PUBYEAR < 2025 AND (LIMIT-TO (SUBJAREA,\textquotedblleft COMP\textquotedblright) OR LIMIT-TO (SUBJAREA,\textquotedblleft ENGI\textquotedblright) OR LIMIT-TO (SUBJAREA,\textquotedblleft MATH\textquotedblright) OR LIMIT-TO (SUBJAREA,\textquotedblleft PHYS\textquotedblright)) AND (LIMIT-TO (EXACTKEYWORD,\textquotedblleft Machine Learning\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Deep Learning\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Generalization\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Performance\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Neural-networks\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Deep Neural Networks\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Overparameterization\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Overfitting\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Generalization Error\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Generalization Performance\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Neural Networks\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Interpolation\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Generalize\textquotedblright))}.}. Esta reciente relevancia ilustra el carácter \textbf{innovador} y \textbf{pionero} de este proyecto.\newline
@@ -9,7 +9,7 @@ El \emph{Deep Double Descent}, al estar estrechamente relacionado al avance tecn
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.7\linewidth]{img/scopus_histogram.png}
-    \caption[Número de publicaciones relativas al \textit{Deep Double Descent} en función del año de publicación.] {Número de publicaciones relativas al \textit{Deep Double Descent} en función del año de publicación. Se utilizan las referencias recuperadas desde Scopus\textsuperscript{\ref{nota:scopus}}, y se incorporan aquellas que se omiten durante el proceso de filtrado o que directamente no aparecen debido a su antigüedad.}\label{fig:histogram}
+    \caption[Número de publicaciones relativas al \textit{Deep Double Descent} en función del año de publicación.] {Número de publicaciones relativas al \textit{Deep Double Descent} en función del año de publicación. Se utilizan las referencias recuperadas desde Scopus\textsuperscript{\ref{nota:scopus}}, complementadas con aquellas que fueron excluidas durante el proceso de filtrado o que no se encuentran disponibles en dicha base de datos.}\label{fig:histogram}
 \end{figure}
 
 Sin embargo, aunque la cantidad de artículos científicos aún sea limitada, el interés por parte de investigadores y científicos está creciendo rápidamente. Incluso en ausencia de publicaciones científicas formales, se continúan obteniendo nuevos resultados, tanto teóricos como prácticos, que continúan enriqueciendo nuestra comprensión del problema.\newline
@@ -38,7 +38,7 @@ No obstante, fue Duin en el año $2000$~\cite{Duin2000} (véanse Figuras 6 y 7) 
 
 Iniciamos esta sección abordando el equilibrio clásico entre sesgo y varianza, un concepto fundamental en la teoría del aprendizaje automático~\cite{Geman1992, Hastie2001, Bengio2010}. Esta teoría sostiene que, a medida que la complejidad de un modelo aumenta, su sesgo disminuye, pero su varianza se incrementa. Como resultado, llega un punto en el que el error de generalización aumenta, formando la tradicional curva en forma de ``U''. De acuerdo con esta visión tradicional, una vez superado cierto umbral de complejidad, los modelos más grandes son cada vez peores y, por tanto, se busca encontrar un equilibrio en el modelo. Sin embargo, los resultados prácticos modernos no comparten esta teoría. En la actualidad, la visión moderna entre los profesionales es que los \emph{modelos grandes son mejores}~\cite{Krizhevsky2012, Neal2019, Huang2019, Szegedy2014}. Estos estudios muestran que el uso de redes neuronales con un gran número de parámetros conduce a un mejor rendimiento, evidenciando que los modelos más complejos pueden obtener resultados superiores a los modelos simples.\newline
 
-Este trabajo se enmarca dentro del estudio de la generalización en redes neuronales profundas. En particular, se enlaza con investigaciones previas, como la de Zhang et al.\ en $2021$~\cite{Zhang2021}, quienes argumentan que comprender el aprendizaje profundo aún requiere replantearse los paradigmas tradicionales de generalización, desafiando la noción clásica de sesgo-varianza.\newline
+Este trabajo se enmarca dentro del estudio de la generalización en redes neuronales profundas, hecho por el que no ha sido percibido con claridad hasta hace relativamente poco tiempo, al estar ligado a una nueva tendencia que favorece el uso de modelos de gran tamaño, impulsada por el incremento de la capacidad de cálculo disponible y la creciente disposición de grandes volúmenes de datos del mundo real. En particular, se enlaza con investigaciones previas, como la de Zhang et al.\ en $2021$~\cite{Zhang2021}, quienes argumentan que comprender el aprendizaje profundo aún requiere replantearse los paradigmas tradicionales de generalización, desafiando la noción clásica de sesgo-varianza.\newline
 
 El \emph{Deep Double Descent} fue nombrado así, por primera vez, por Belkin et al.\ en $2019$ \cite{Belkin2019}, haciendo referencia a los dos descensos que presenta la curva del error de generalización. En este artículo, se busca unificar la teoría clásica del equilibrio sesgo-varianza con los resultados prácticos obtenidos por la teoría moderna, mediante una curva de error unificada (véase~\autoref{fig:estadoarte2.2}). Belkin et al.\ muestran la aparición del doble descenso en diversos modelos y sobre distintos tipos de datos, entre los que se incluyen los árboles de decisión y redes neuronales poco profundas. Además, ofrece una primera intuición sobre su causa argumentando que, en la región sobreparametrizada, el modelo dispone de un mayor número de funciones candidatas compatibles con los datos. A esto se suma el efecto de la regularización implícita inducida por ciertos algoritmos de optimización, como el gradiente descendente~\cite{Soudry2024}.\newline
 
@@ -63,13 +63,13 @@ Singh et al. en $2022$~\cite{Singh2022} presentaron un análisis teórico en red
 
 Por otra parte, estudios modernos han abordado este comportamiento desde la perspectiva de los sesgos inductivos en redes neuronales. En $2025$, Andrew Wilson~\cite{Wilson2025} plantea que la generalización puede entenderse intuitivamente y formalizarse mediante marcos teóricos consolidados, introduciendo los \textit{sesgos inductivos suaves} como principio unificador. Esta visión coincide con la de Mingard et al.\ ($2023$)~\cite{Mingard2023}, quienes argumentan que las redes neuronales siguen un principio similar al de la navaja de Ockham.\newline
 
-Finalmente, investigaciones recientes han mostrado extensiones del doble descenso, pues este no está necesariamente limitado a dos descensos, sino que, bajo ciertas circunstancias, pueden observarse más de dos descensos~\cite{d_Ascoli2021, Chen2021}. Además, se ha estudiado su relación con otros sucesos emergentes en el aprendizaje profundo, como es el caso del \emph{grokking}~\cite{Power2022}. En este contexto, Davies et al. en $2023$~\cite{Davies2023} propusieron una conexión entre ambos, sugiriendo que el aprendizaje prolongado puede llevar a una mejora abrupta de la generalización (véase Figura~\ref{fig:grokking}). El \textit{grokking}, en particular, suele asociarse a conjuntos de datos pequeños y estructurados, tras un entrenamiento prolongado en el que el modelo transita abruptamente de la memorización a la generalización. Por su parte, el \textit{double descent} se manifiesta típicamente en modelos de gran capacidad entrenados con datos ruidosos, en los que se refleja una tendencia decreciente del error vinculada a la capacidad del modelo.\newline
-
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.6\linewidth]{img/grokking.png}
     \caption[\textit{Grokking} y \textit{Deep Double Descent}.]{Error en entrenamiento y generalización para el caso de \textit{grokking} (línea verde) y para el doble descenso (línea naranja). Se observa que el \textit{grokking} implica una mejora abrupta en términos de generalización una vez superado el umbral de interpolación, mientras que el doble descenso muestra una mejora progresiva a partir de ese punto.}\label{fig:grokking}
 \end{figure}
+
+Finalmente, investigaciones recientes han mostrado extensiones del doble descenso, pues este no está necesariamente limitado a dos descensos, sino que, bajo ciertas circunstancias, pueden observarse más de dos descensos~\cite{d_Ascoli2021, Chen2021}. Además, se ha estudiado su relación con otros sucesos emergentes en el aprendizaje profundo, como es el caso del \emph{grokking}~\cite{Power2022}. En este contexto, Davies et al. en $2023$~\cite{Davies2023} propusieron una conexión entre ambos, sugiriendo que el aprendizaje prolongado puede llevar a una mejora abrupta de la generalización (véase Figura~\ref{fig:grokking}). El \textit{grokking}, en particular, suele asociarse a conjuntos de datos pequeños y estructurados, tras un entrenamiento prolongado en el que el modelo transita abruptamente del sobreajuste a la generalización. Por su parte, el \textit{double descent} se manifiesta típicamente en modelos de gran capacidad entrenados con datos ruidosos, en los que se refleja una tendencia decreciente del error vinculada a la capacidad del modelo.\newline
 
 Para concluir este capítulo, se presenta en la Tabla~\ref{tabla:resumen-contribuciones} un resumen de las principales publicaciones relacionadas con el doble descenso, aunque las primeras manifestaciones no utilizan la denominación actual, junto con sus contribuciones más relevantes. Asimismo, se incluye en la tabla el número de citas de cada publicación, obtenido a partir de \textit{Google Scholar}\footnote{Número de citas encontradas a día 12 de abril de 2025.}.\newline
 
