--- a/LaTex/library.bib
+++ b/LaTex/library.bib
@@ -387,6 +387,18 @@
        URL = {https://proceedings.mlr.press/v9/glorot10a.html},
 }
 
+@article {Geiger2019,
+    AUTHOR = {Geiger, Mario and Spigler, Stefano and d'Ascoli, Stéphane and Sagun, Levent and Baity-Jesi, Marco and Biroli, Giulio and Wyart, Matthieu},
+     TITLE = {Jamming transition as a paradigm to understand the loss landscape of deep neural networks},
+   JOURNAL = {Physical Review E (PRE)},
+    VOLUME = {100},
+      YEAR = {2019},
+    NUMBER = {1},
+      ISSN = {2470-0053},
+       DOI = {10.1103/physreve.100.012115},
+       URL = {http://dx.doi.org/10.1103/PhysRevE.100.012115},
+}
+
 @article {Spigler2019,
     AUTHOR = {Spigler, S and Geiger, M and d'Ascoli, S and Sagun, L and Biroli, G and Wyart, M},
      TITLE = {A jamming transition from under- to over-parametrization affects generalization in deep learning},
@@ -397,6 +409,18 @@
       ISSN = {1751-8121},
        DOI = {10.1088/1751-8121/ab4c8b},
        URL = {http://dx.doi.org/10.1088/1751-8121/ab4c8b},
+}
+
+@article {Solomonoff1964,
+    AUTHOR = {R.J. Solomonoff},
+     TITLE = {A formal theory of inductive inference. Part I},
+   JOURNAL = {Information and Control},
+    VOLUME = {7},
+      YEAR = {1964},
+    NUMBER = {1},
+      ISSN = {0019-9958},
+       DOI = {https://doi.org/10.1016/S0019-9958(64)90223-2},
+       URL = {https://www.sciencedirect.com/science/article/pii/S0019995864902232},
 }
 
 @article {Zhang2021,
@@ -486,7 +510,31 @@
        URL = {http://dx.doi.org/10.1073/pnas.1903070116},
 }
 
-@article {Geiger2019,
+@article {McAllester1999,
+    AUTHOR = {McAllester, David A.},
+     TITLE = {PAC-Bayesian model averaging},
+   JOURNAL = {Proceedings of the Annual Conference on Computational Learning Theory (COLT)},
+      YEAR = {1999},
+      PAGES = {164--170},
+      ISSN = {1581131674},
+       DOI = {10.1145/307400.307435},
+       URL = {https://doi.org/10.1145/307400.307435},
+}
+
+@article {Valiant1984,
+    AUTHOR = {Valiant, L. G.},
+     TITLE = {A theory of the learnable},
+   JOURNAL = {Association for Computing Machinery},
+    VOLUME = {27},
+      YEAR = {1984},
+      NUMBER = {11},
+      PAGES = {1134--1142},
+      ISSN = {0001-0782},
+       DOI = {10.1145/1968.1972},
+       URL = {https://doi.org/10.1145/1968.1972},
+}
+
+@article {Vapnik1991,
     AUTHOR = {Vapnik, V.},
      TITLE = {Principles of risk minimization for learning theory},
    JOURNAL = {Proceedings of the International Conference on Neural Information Processing Systems (NeurIPS)},
@@ -959,7 +1007,32 @@
   note         = {Lecture 4, Slide 45, Available at: \url{http://cs231n.stanford.edu/}}
 }
 
+@misc{Lotfi2024,
+  title        = {Non-Vacuous Generalization Bounds for Large Language Models},
+  author       = {Sanae Lotfi and Marc Finzi and Yilun Kuang and Tim G. J. Rudner and Micah Goldblum and Andrew Gordon Wilson},
+  year         = {2024},
+  eprint={2312.17173},
+  archivePrefix={arXiv},
+  primaryClass={stat.ML},
+  note={Preprint. arXiv: 2312.17173},
+}
 
+@misc{Lotfi2022,
+  title        = {PAC-Bayes Compression Bounds So Tight That They Can Explain Generalization},
+  author       = {Sanae Lotfi and Marc Finzi and Sanyam Kapoor and Andres Potapczynski and Micah Goldblum and Andrew Gordon Wilson},
+  year         = {2024},
+  eprint={2211.13609},
+  archivePrefix={arXiv},
+  primaryClass={cs.LG},
+  note={Preprint. arXiv: 2211.13609},
+}
 
-
-
+@misc{Lee2016,
+  title        = {Gradient Descent Converges to Minimizers},
+  author       = {Jason D. Lee and Max Simchowitz and Michael I. Jordan and Benjamin Recht},
+  year         = {2016},
+  eprint={1602.04915},
+  archivePrefix={arXiv},
+  primaryClass={stat.ML},
+  note={Preprint. arXiv: 1602.04915},
+}
